compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-3/neg/1.5.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 3 -> sentence 1
 * NUMBER: 5
 * DESCRIPTION: Real literals with omitted whole-number part and an exponent mark followed by a float suffix and digits.
 */

konst konstue = .0f00e0

konst konstue = .0f0e-0
konst konstue = .00F9E9
konst konstue = .000F0e1

konst konstue = .0F0e
konst konstue = .00F9e+f
konst konstue = .000f5ef
konst konstue = .0000F1EF2EF3EF4EF5EF6EF7EF8EF9
konst konstue = .0f7e+0F
konst konstue = .00F000000000000e-0000000000000
konst konstue = .000f9E0000000000000F
konst konstue = .0000f2e+0000000000000
konst konstue = .0F4E+F

konst konstue = .888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888f8e+0
konst konstue = .000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f8e8
konst konstue = .000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f0E0000001
konst konstue = .000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f6E010
